	PR c++/83273 - constexpr if allows non-constant condition

* semantics.c (finish_if_stmt_cond): Use require_constant_expression
	rather than is_constant_expression.
	* constexpr.c (potential_constant_expression_1) [LAMBDA_EXPR]: Allow
	in C++17.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@255390 138bc75d-0d04-0410-961f-82ee72b054a4